# ChangeLog for sys-fs/loop-aes
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/loop-aes/ChangeLog,v 1.94 2013/07/04 12:16:39 ago Exp $

  04 Jul 2013; Agostino Sarubbo <ago@gentoo.org> loop-aes-3.6g.ebuild:
  Stable for x86, wrt bug #469380

  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> loop-aes-3.6g.ebuild:
  Stable for arm, wrt bug #469380

  09 Jun 2013; Chema Alonso <nimiux@gentoo.org> loop-aes-3.6g.ebuild:
  Stable for amd64 wrt bug #469380

*loop-aes-3.6h (10 May 2013)

  10 May 2013; Alon Bar-Lev <alonbl@gentoo.org> +loop-aes-3.6h.ebuild:
  Version bump, bug#469306

  12 Jan 2013; Alon Bar-Lev <alonbl@gentoo.org> metadata.xml:
  Remove c1pher as a maintainer

  12 Jan 2013; Alon Bar-Lev <alonbl@gentoo.org> loop-aes-3.6g.ebuild:
  Add loop-aes-losetup note

  04 Jan 2013; Alon Bar-Lev <alonbl@gentoo.org> loop-aes-3.6g.ebuild:
  Optionally depend on app-crypt/loop-aes-losetup, bug#390657

  22 Dec 2012; Alon Bar-Lev <alonbl@gentoo.org> loop-aes-3.6e.ebuild:
  Fix location of linux-mod_pkg_setup

  20 Dec 2012; Alon Bar-Lev <alonbl@gentoo.org> loop-aes-3.6e.ebuild:
  Check for CONFIG_MODULES, per bug#447948, thanks to Agostino Sarubbo

  15 Dec 2012; Alon Bar-Lev <alonbl@gentoo.org> loop-aes-3.6g.ebuild:
  Enable verbose build, per bug#447318

*loop-aes-3.6g (14 Dec 2012)

  14 Dec 2012; Alon Bar-Lev <alonbl@gentoo.org> +loop-aes-3.6g.ebuild:
  Version bump

  29 Apr 2012; Thomas Kahle <tomka@gentoo.org> loop-aes-3.6e.ebuild:
  marked x86 per bug 377169

*loop-aes-3.6e (08 Jan 2012)

  08 Jan 2012; Robin H. Johnson <robbat2@gentoo.org> +loop-aes-3.6e.ebuild:
  Version bump, bug #397981.

*loop-aes-3.6d (07 Jan 2012)

  07 Jan 2012; Robin H. Johnson <robbat2@gentoo.org> +loop-aes-3.6d.ebuild:
  Version bump, bug #388759 to compile against kernel 3.2.

*loop-aes-3.6c (13 Jun 2011)

  13 Jun 2011; Dane Smith <c1pher@gentoo.org> -loop-aes-3.5b.ebuild,