@@ -1,35 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST loop-AES-v3.6b.tar.bz2 250771 SHA256 3e3dbf3e248f069274aa2ef9f938ee2b116d9ce368b98c5f0ee3b5ec6db948ce SHA512 3524148e1ffc7904d07c93fa15cfbb43d4fd3c7c3a60cfc222cbcc75044ef9b400a67f8384aa68d6406dea2b4e814ff099c2c7721a27ed13d1ebaa09d282b628 WHIRLPOOL 093555621c4365403e6921ab06df7e4928c1cd3265eee8da3a30670381d39cdc8e14eff733e49c38f8af41709084c4fa09332815c8d7fe0855a06a564179e51b
-DIST loop-AES-v3.6c.tar.bz2 251279 SHA256 2fdd0811df62e9c8847c75c884f68ba8054d8b9234e0aa1388848462d55d50e5
-DIST loop-AES-v3.6d.tar.bz2 313317 SHA256 7eeb0cd3ddda20144c93553dc0b159ca1d757610da5b6fe3ad87263a61ee402b
-DIST loop-AES-v3.6e.tar.bz2 313602 SHA256 1887bb12abcda29d98c1d07fcaf850eafc1e0fda1411803fadbeef1e70cc3b20 SHA512 f454fa7154d78156872d746e7b19488a3ab64c660a80bde68f52f520bbe2986b20612df5e066038295dc73d882c5a88a8977fabc8798a0f61ba25f07cf80df51 WHIRLPOOL 6002402110384a802fc06e606a5d0ea15f719150d2d4f789dd03ae776016e0d4f779ae5ae14ad267f69c0bea2289adf5d26b127862c5b4a4938a6126083f871a
 DIST loop-AES-v3.6g.tar.bz2 331560 SHA256 228ca27c386af0099be059a91510fb6bf8de3bd5daed7a1f350ce65a784f279e SHA512 df214e57ecfdcac2f77319d5dd3d67a8a7ceaa977f1f3fa07e6f77a1dc2dcb30f4cceacefcdb904b06579bc3ba9b222927e666de1d70ad6c793c085c3c477357 WHIRLPOOL f2d5c6fecd64c3ffdf8f2271a8108180bf337bca6ee9c886083f5b717ff4313c16e1dd29f979f3d8904355ae653d81ae78f6dda58544314df5f7b641adcacc72
 DIST loop-AES-v3.6h.tar.bz2 332717 SHA256 a8258e0eb284e38dd522dcf98ec4ca492737de1406e541926783f0342f405ee5 SHA512 7f1d80d0ab8b72ac1d8fd56037aa0de6535ef9066ce731e4e12e462708a2707462e52a4a5cb5f45525d96a9671da5d2b947d192e30a68ae3f7aacc398e3d1023 WHIRLPOOL f6a3b3d521d44b2a66f8bd453c60d2c01324b41c8c952a3ef6ce46923b3f95f3bf06ced903a80e597d5eef152663b67256caa75b47fd4013a7113b725a9ec812
-EBUILD loop-aes-3.6b-r1.ebuild 2026 SHA256 24c75c54b9777e2dff15e758fc264a3cdcec6ec6d48e8841762b2cda7019ae24 SHA512 eedf558be98f8327c898bf3cbf30a6d94807dc118d7dc8253b6a090b55058cf65dd48a0cd49fb04dc628acff0af785810f5a999cc776e473fb9a2ad726bf2d57 WHIRLPOOL 26a4f439833315da5cb776781c1d51e477f3cf849bf6478bc6c766a2952862ae1e3f79ff01506d4c2f10ef24a5eb94155d590b70a2bbcdef8fabd374abd28a58
-EBUILD loop-aes-3.6b.ebuild 1716 SHA256 827122d8a7980181e314ff077bc6bf118202a82d2f49ced84338282066a2d176 SHA512 c7237b4e8b2bd74e10dbf24af4fbc5ec47009fba1fb089fc0fc737937b771842ac2d738924f03e4882c56ea642ed06e1075f91a6111d308608ecc6f53f1a6854 WHIRLPOOL 2a11884bfa843b9c086dbc6e0c5dbe415305a4fc22c8973c620185ab93c7b8d9c173e08acd3df2916b51ebc34d12898525ea6ceb4f17d7bf4801845016beb870
-EBUILD loop-aes-3.6c.ebuild 2023 SHA256 c02e1003f9b74f01a869ee96e83fb00d4bc98e064ee2d65a20faacad465a60a0 SHA512 4191f9fda76231613b4d908577156da33346df389c67316cde7262e4d27e0a43dba60a01386bada994ccdec104430f9034fb04663b1eba9252dbc06d162fa9b8 WHIRLPOOL 1bf2e9ac25f5c6eb0b2054751edd6ffc092b750f9e900ef9058b6dbf43fc2d268b98ecbe3be308cbbb5ac142c9f3c4c070f403dd7a9ae0907a6edb6c74068bf9
-EBUILD loop-aes-3.6d.ebuild 2024 SHA256 27ea8df67cd51dc6aa07aa48e98bc3466bade5c2afe821733f34fa0c55fb3269 SHA512 70a3f96934474b401996395190bb9440cf08da13f9b0ca1c7704363daf99111ccf4f4ca2060b0a5f63ceb55e9e884950a87671df2f8af070510784d87ee20a7e WHIRLPOOL b3fba393ca5aab133126e21bec99121eea9fe1ef9001467662ab4effd7d045716769fb4ca9204d72d5d7fd5e2387534a502ec308d6de7ddeb2119b86db5dcb86
-EBUILD loop-aes-3.6e.ebuild 2030 SHA256 14588c0c64cb9db1dc09babd01987798156fc8cace10d476671876830f17404c SHA512 5b8b0d02d012eb605b6f222c22b5f793e38ebb80b69b6bb5eddf86b6bba0744d39f75f8cc5980c2b4e921bcb09ca8d91a19c6be11405cac9ad2905ec041e5280 WHIRLPOOL dab995fdeeb95334dc494ca67763a415f5f9240142622206e287e0f70884e5fcf0f9cc1d38009c9f736916371e5af713561f209c86e5a1a89f4a8bc18584f574
 EBUILD loop-aes-3.6g.ebuild 2322 SHA256 27c8fe94216420cad750efff06360b31c6906ea1ceadc300731239ad64b3f157 SHA512 d82e8f33cbdba4162c0b29552f3197a51a408bd8ca24c0c369e886a47298ca0142521afa7e6ea2678f2d3df1d8627605dbc245f8950a87b79350e95241e9cb81 WHIRLPOOL f8e5f8a2ec4c4cd9531ea1eff1b46fb30108826ca28000b78109a1d2a35cc3bc961237d4098207a3826d9381f57fbf13b30dccd91505d78adaa4ee6284af150a
 EBUILD loop-aes-3.6h.ebuild 2328 SHA256 4ab0160fe47dd5b03fcd07b4237a6412db1cdf28435dbc36ee136c9859591f46 SHA512 345446c30e4bb44ddc971839a8faf97fde86a20a7af7c763e2d43ff9832043449df51823c3c9d457f9a3c59e65367049a6648b9be96d60336fe157cd6965e54c WHIRLPOOL 0f3d0b0e21e9a9fcd85aeb12d5eea2190169e66a846b86149e246a474c143149ea5dfbdd7bb94596ac24b99cfef447043c872bf9b96f7c253a870ab215a6b596
-MISC ChangeLog 12593 SHA256 67b66bd4034d81ad01020e7fae945fb463fba0affecf4a30dd19c77bdbc0233a SHA512 8c8215daae1640c637022dd2b0e1c3fa684120236900423bddae6ceeea17cece85cad7228cd106468875323579b0b2e6c877165b1ca8fe587e26f0b27faeecb4 WHIRLPOOL 4d99e6749e78c08d2c9c3ada18fae86db804d4204a404d224f4d07559d9cf8ab5984a58b3a3fb31dfbcff300ee8bffdc1e82d57df268aaa1f126bc734eb5f21b
+MISC ChangeLog 12789 SHA256 6316917746f03c77a8e6891b4f31751a9adf6cb702d333ae5dc05ce7848af194 SHA512 bc4b5d844bee6d03dcd36478aece7c06ea954f4184789701401404e00c431dcc122f97ad413cedb8ca3e1e6add2e3e37a01cd929310ea9954da2ec7f674b0fcb WHIRLPOOL 3ae0a27d90ba2767a68aab9ddb9aaffbdb3710d7f6cff4ebec5831a906c8f973f712c4f2a640f3f632f2b3d7eaf4013476da96fa1bf31c07a9e65d157d6a1903
 MISC metadata.xml 540 SHA256 1b058e97fb2f2c4831739d470938c878090d511fb223102107eb86b9819a7b8c SHA512 201393015c486283648b6afea4bae36cbee26d01558fbd8dfc9a01aa2a8462b44cd1ffd41afb7a624ef2cd6258fa9def88b209227fae94b3d65e352c0199e1d4 WHIRLPOOL 9ecad49145121b89c68eb1882c689ae909ec4fcb56098570691f0f54f7d2102a932a2399240e628f4e17461a24ec81b9a1b42d097fb8118f8e4b05af7388c831
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJR1WenAAoJELp701BxlEWfS98QAJdTfhzLJKlJZFYIDXTbEIhd
-AXgvN9CcnMw2KoyW1FUpbOxrQau9dgqXr5PIX3f3Ef0ea1lLmhIZe+Ol/6H/0mmK
-F1HvI4lMR0QQzIIVbInAA93xZcpQx0a2TY/HPF3h/RHd5naTfzgPyrz7dscdV3al
-byhDkzaDFPqmJi31w8LEsGf45dumkmTvRnIoj1bHytXhzuSH9yvSyBqNxAUz7wji
-/AOqZnUmvT6RG2WXxGw3UDHOuEclvCKDk2H2MW8RLdmtgdEdQJLI+y9iV/x4DE6j
-3/ztRYzh8HNd/Y7OjjRN7qh/L2JvQh9YE76zSoK5xj1bJ896+3N+L33EvMCAaxtV
-y01rkDa0x0GxokdQ3avbILwGRbcGuhHzHTTPxcSyAQ+8WncbUoQnz3UF52UUtafa
-tJefzI6OQG0NX6btsrk3JWXpXx0YTzPigjVCNUu61kYS98Sh48DC4+iO3WyeulAF
-w7TOBj60+e6AV35h6R5+QaeVW38jCjGtFlfSrpHm5B44TguRbDw/fI6237UVYoHT
-xJ4Uoa4dnm/xpExzrBv6Ekka9MFOuDTMtqk9hrRL92y30r8ArLmFpj9daHiAXZkB
-mqCYcenHhNc+k58hCA3xBN9hatekyKZwA2VmxCfJNogJ369n2NT4xSiE/UMJILeM
-H52t8359AZt4HwJ2I17k
-=9msw
+iF4EAREIAAYFAlHVsjoACgkQXYk9GL8g3FEstwD/UwqazDSNvxNZ/GME3n6WLJOX
+I4/aB5omAcqA7flFI3cA/Rbt06M8SVlIfs91kL8ZlfEm784cwYXWWDTpS7Qc26OS
+=Q/tt
 -----END PGP SIGNATURE-----
