@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/loop-aes
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/loop-aes/ChangeLog,v 1.94 2013/07/04 12:16:39 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/loop-aes/ChangeLog,v 1.95 2013/07/04 17:34:42 alonbl Exp $
+
+  04 Jul 2013; Alon Bar-Lev <alonbl@gentoo.org> -loop-aes-3.6b-r1.ebuild,
+  -loop-aes-3.6b.ebuild, -loop-aes-3.6c.ebuild, -loop-aes-3.6d.ebuild,
+  -loop-aes-3.6e.ebuild:
+  remove old packages
 
   04 Jul 2013; Agostino Sarubbo <ago@gentoo.org> loop-aes-3.6g.ebuild:
   Stable for x86, wrt bug #469380
